# xcav-dip-kilt

./: .gitignore  Cargo.toml  collators.txt  keys.txt  para-4003-genesis-state  para-4003-wasm.txt  plain-parachain-chainspec.json  raw-parachain-chainspec.json
dip-template/nodes/dip-consumer/src/: chain_spec.rs  cli.rs  command.rs
dip-template/pallets/game/: Cargo.toml
dip-template/pallets/game/src/: benchmarking.rs  functions.rs  lib.rs  tests.rs  weights.rs
dip-template/pallets/nft-marketplace/src/: lib.rs
dip-template/runtimes/dip-consumer/: Cargo.toml
dip-template/runtimes/dip-consumer/src/: constants.rs  dip.rs  lib.rs  origin_adapter.rs
