[package]
name = "pallet-game"
version = "4.0.0-dev"
description = "Game pallet for defining game logic."
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/Node_Hackathon_Apr2024"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

pallet-nfts = { workspace = true }
enumflags2 = { version = "0.7.7", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
sp-core    = { workspace = true }
sp-runtime = { workspace = true }

pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde/std",
	"pallet-nfts/std",
	"pallet-balances/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
