[package]
authors       = { workspace = true }
description   = "Parachain runtime template for the KILT Decentralized Identity Provider (DIP) consumer."
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "dip-consumer-runtime-template"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

# DIP
did                           = { workspace = true }
dip-provider-runtime-template = { workspace = true }
kilt-dip-primitives           = { workspace = true }
pallet-dip-consumer           = { workspace = true }
pallet-nft-marketplace        = { workspace = true }
pallet-postit                 = { workspace = true }
pallet-property-governance    = { workspace = true }
pallet-property-management    = { workspace = true }
pallet-relay-store            = { workspace = true }
pallet-xcavate-whitelist      = { workspace = true }
pallet-game        = { workspace = true }

# Substrate
frame-executive                            = { workspace = true }
frame-support                              = { workspace = true }
frame-system                               = { workspace = true }
frame-system-rpc-runtime-api               = { workspace = true }
pallet-assets                              = { workspace = true }
pallet-aura                                = { workspace = true }
pallet-authorship                          = { workspace = true }
pallet-balances                            = { workspace = true }
pallet-collective                          = { workspace = true }
pallet-nft-fractionalization               = { workspace = true }
pallet-nfts                                = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-session                             = { workspace = true }
pallet-sudo                                = { workspace = true }
pallet-timestamp                           = { workspace = true }
pallet-transaction-payment                 = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility                             = { workspace = true }
sp-api                                     = { workspace = true }
sp-block-builder                           = { workspace = true }
sp-consensus-aura                          = { workspace = true }
sp-core                                    = { workspace = true }
sp-genesis-builder                         = { workspace = true }
sp-inherents                               = { workspace = true }
sp-offchain                                = { workspace = true }
sp-runtime                                 = { workspace = true }
sp-session                                 = { workspace = true }
sp-std                                     = { workspace = true }
sp-transaction-pool                        = { workspace = true }
sp-version                                 = { workspace = true }
sp-weights                                 = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext         = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true, features = ["parameterized-consensus-hook"] }
cumulus-primitives-aura         = { workspace = true }
cumulus-primitives-core         = { workspace = true }
cumulus-primitives-timestamp    = { workspace = true }
pallet-collator-selection       = { workspace = true }
parachain-info                  = { workspace = true }

# Polkadot
rococo-runtime = { workspace = true }

# Benchmarks
frame-benchmarking        = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
hex-literal               = { workspace = true, optional = true }
kilt-support              = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "did/std",
  "dip-provider-runtime-template/std",
  "frame-benchmarking?/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-benchmarking?/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "kilt-dip-primitives/std",
  "kilt-support?/std",
  "pallet-assets/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-selection/std",
  "pallet-collective/std",
  "pallet-dip-consumer/std",
  "pallet-nft-fractionalization/std",
  "pallet-nft-marketplace/std",
  "pallet-nfts/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-postit/std",
  "pallet-property-governance/std",
  "pallet-property-management/std",
  "pallet-relay-store/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "pallet-xcavate-whitelist/std",
  "pallet-game/std",
  "parachain-info/std",
  "parity-scale-codec/std",
  "rococo-runtime/std",
  "scale-info/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-genesis-builder/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-weights/std",
]

runtime-benchmarks = [
  "did/runtime-benchmarks",
  "dip-provider-runtime-template/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "kilt-dip-primitives/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-dip-consumer/runtime-benchmarks",
  "pallet-nft-fractionalization/runtime-benchmarks",
  "pallet-nft-marketplace/runtime-benchmarks",
  "pallet-nfts/runtime-benchmarks",
  "pallet-property-governance/runtime-benchmarks",
  "pallet-property-management/runtime-benchmarks",
  "pallet-relay-store/runtime-benchmarks",
  "pallet-sudo/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-xcavate-whitelist/runtime-benchmarks",
  "pallet-game/runtime-benchmarks",
  "rococo-runtime/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
